@@ -238,14 +238,16 @@ sub check_init {
 
 	# Pretty dummy way to handle conditionals, but should be enough
 	# for simple init scripts
-	$in_file_test = 1 if ($l =~ m/\bif\s+.+?[\s+-[fe]\s+/);
+	$in_file_test = 1 if ($l =~ m/\bif\s+.+?\[\s+-[fe]\s+/);
 	$in_file_test = 0 if ($l =~ m/\bfi\b/);
 	if (!$in_file_test && $l =~ m,^\s*\.\s+["'"]?(/etc/default/[\$\w/-]+),) {
 	    tag "init.d-script-sourcing-without-test", "/etc/init.d/$_:$. $1";
 	}
 
-	$needs_fs{'remote'} = 1 if ($l =~ m,^[^#]*/usr,);
-	$needs_fs{'local'}  = 1 if ($l =~ m,^[^#]*/var,);
+	# This should be more sophisticated: ignore heredocs, ignore quoted
+	# text and the arguments to echo, etc.
+	$needs_fs{'remote'} = 1 if ($l =~ m,^[^\#]*/usr,);
+	$needs_fs{'local'}  = 1 if ($l =~ m,^[^\#]*/var,);
 
 	while ($l =~ s/^[^\#]*?(start|stop|restart|force-reload)//o) {
 	    $tag{$1} = 1;
@@ -328,17 +330,17 @@ sub check_init {
 	    unless $provides_self;
     }
 
-    # if $remote_fs is needed $local_fs is not, as it is implied
+    # If $remote_fs is needed $local_fs is not, since it's implied.
     $needs_fs{'local'} = 0 if $needs_fs{'remote'};
 
     for my $keyword qw(required-start should-start required-stop should-stop) {
 	if ($keyword =~ m/^required-(start|stop)$/
 	    && defined $lsb{"default-$1"} && length($lsb{"default-$1"})) {
 
-	    tag "missing-dependency-on-remote_fs", "/etc/init.d/$_: $keyword"
+	    tag "init.d-script-missing-dependency-on-remote_fs", "/etc/init.d/$_: $keyword"
 		if ($needs_fs{'remote'} && (!defined $lsb{$keyword}
 		    || $lsb{$keyword} !~ m,(?:^|\s)\$remote_fs(?:\s|$),));
-	    tag "missing-dependency-on-local_fs", "/etc/init.d/$_: $keyword"
+	    tag "init.d-script-missing-dependency-on-local_fs", "/etc/init.d/$_: $keyword"
 		if ($needs_fs{'local'} && (!defined $lsb{$keyword}
 		    || $lsb{$keyword} !~ m,(?:^|\s)\$(local|remote)_fs(?:\s|$),));
 	}
